--- a/www/templates/spots.html
+++ b/www/templates/spots.html
@@ -5,7 +5,7 @@
   <ion-content class="has-header">
     <ion-list>
       <ion-item ng-repeat="spot in spots" href="#/app/spots/{{spot.id}}">
-        {{spot.title}}
+        {{spot.name}}
       </ion-item>
     </ion-list>
   </ion-content>
