added offline map proof-of-concept

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -19,6 +19,9 @@
 				<ion-item nav-clear menu-close href="#/app/map">
           Map
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/offlinemap">
+          Offline Map
+        </ion-item>
 				<ion-item nav-clear menu-close href="#/app/search">
           Search
         </ion-item>
