--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -14,6 +14,17 @@
         <input type="date" ng-model="spot.date" value={{spot.date}}>
       </label>
       <div class="item item-divider">
+        Location
+      </div>
+      <label class="item item-input">
+        <span class="input-label">Latitude</span>
+        <input type="number" ng-model="spot.lat" value={{spot.lat}}>
+      </label>
+      <label class="item item-input">
+        <span class="input-label">Longitude</span>
+        <input type="number" ng-model="spot.lng" value={{spot.lng}}>
+      </label>
+      <div class="item item-divider">
         Spot Type
       </div>
       <ion-radio ng-repeat="spotType in spotTypes"
