added markers to map

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -6,6 +6,6 @@
     <button ng-click="getLocation();" class="button button-icon icon ion-pinpoint"></button>    
   </ion-nav-buttons>
   <ion-content data-tap-disabled="true" ng-controller="MapCtrl">
-      <leaflet center="center" layers="layers" class="map"></leaflet>
+      <leaflet center="center" layers="layers" markers="markers" class="map"></leaflet>
   </ion-content>
 </ion-view>
