NewSpot service holds entire geojson object for spot, not just geometry

--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -21,8 +21,7 @@
         </ion-buttons>
       </div>
       <label class="item item-input">
-        <span class="input-label">geojson</span>
-        <input type="string" ng-model="spot.geometry" value={{spot.geometry.type}} ng-disabled="true">
+        <input type="string" ng-model="friendlyGeom" value={{friendlyGeom}} ng-disabled="true">
       </label>
       <div class="item item-divider">
         Spot Type
