--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -4,6 +4,10 @@
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
         <button ng-click="getLocation();" class="button button-icon icon ion-pinpoint"></button>
+        <button ng-click="toggleAirplaneMode()" ng-class="{'button button-icon icon ion-earth': !airplaneMode,
+        'button button-icon icon ion-plane':airplaneMode}"></button>
+        <button ng-click="clearOfflineTile();" class="button button-icon icon ion-trash-b"></button>
+        {{numOfflineTiles}} tiles
     </ion-nav-buttons>
     <ion-content data-tap-disabled="true">
 
