--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,3 +1,39 @@
+<style type="text/css">
+.draw-controls {
+    position: absolute;
+    top: 65px;
+    left: 8px;
+    background: rgba(255, 255, 255, 0.4);
+    border-radius: 4px;
+    padding: 2px;
+}
+.ol-touch .draw-controls {
+    top: 80px;
+}
+.draw-controls a {
+    display: block;
+    color: white;
+    font-size: 16px;
+    font-family: 'Lucida Grande', Verdana, Geneva, Lucida, Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    margin: 1px;
+    text-decoration: none;
+    text-align: center;
+    border-radius: 2px;
+    height: 22px;
+    width: 22px;
+    background: #5c914f;
+}
+.ol-touch .draw-controls a {
+    font-size: 20px;
+    height: 30px;
+    width: 30px;
+    line-height: 26px;
+}
+.draw-controls a:hover {
+    background: rgba(0, 60, 136, 0.7);
+}
+</style>
 <ion-view title="Strabo Mobile">
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
@@ -12,20 +48,6 @@
     <ion-content data-tap-disabled="true">
 
         <div id="mapdiv" style="height:100%"></div>
-
-        <button ng-class="{ 'button button-icon icon ion-more glyph-active': drawButtonActive === 'Point',
-                    'button button-icon icon ion-more': drawButtonActive !== 'Point'
-                      }" ng-click='startDraw("Point")' style='position: absolute; top:100px;'></button>
-
-        <button ng-class="{
-                    'button button-icon icon ion-arrow-graph-up-right glyph-active': drawButtonActive === 'LineString',
-                    'button button-icon icon ion-arrow-graph-up-right': drawButtonActive !== 'LineString'
-                      }" ng-click='startDraw("LineString")' style='position: absolute; top:150px;'></button>
-
-        <button ng-class="{
-                    'button button-icon icon ion-ios7-star-outline glyph-active': drawButtonActive === 'Polygon',
-                    'button button-icon icon ion-ios7-star-outline': drawButtonActive !== 'Polygon'
-                     }" ng-click='startDraw("Polygon")' style='position: absolute; top:200px;'></button>
 
     </ion-content>
 </ion-view>
