--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -23,7 +23,7 @@
           Spots
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/offlinemap">
-          Offline Map
+          Offline Areas
         </ion-item>
 				<ion-item nav-clear menu-close href="#/app/search">
           Search
