added button to cache tiles

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,17 +1,16 @@
 <ion-view title="Strabo Mobile">
     <ion-nav-buttons side="left">
-        <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+      <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
     <ion-nav-buttons side="right">
-        <button ng-click="getLocation();" class="button button-icon icon ion-pinpoint"></button>
-        <button ng-click="toggleAirplaneMode()" ng-class="{'button button-icon icon ion-earth': !airplaneMode,
-        'button button-icon icon ion-plane':airplaneMode}"></button>
-        <button ng-click="clearOfflineTile();" class="button button-icon icon ion-trash-b"></button>
-        {{numOfflineTiles}} tiles
+      <button ng-click="getLocation();" class="button button-icon icon ion-pinpoint"></button>
+      <button ng-click="toggleAirplaneMode()" ng-class="{'button button-icon icon ion-earth': !airplaneMode,
+      'button button-icon icon ion-plane':airplaneMode}"></button>
+      <button ng-click="cacheOfflineTiles();" class="button button-icon icon ion-archive"></button>
+      <button ng-click="clearOfflineTile();" class="button button-icon icon ion-trash-b"></button>
+      {{numOfflineTiles}} tiles
     </ion-nav-buttons>
     <ion-content data-tap-disabled="true">
-
-        <div id="mapdiv" style="height:100%"></div>
-
+      <div id="mapdiv" style="height:100%"></div>
     </ion-content>
 </ion-view>
