added view spot button to spot page

--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -1,8 +1,7 @@
 <ion-view title="Spot Detail">
-<ion-nav-bar>
-  <ion-nav-back-button class="button-clear">
-    <i class="ion-arrow-left-c"></i> Back
-  </ion-nav-back-button>
+  <ion-nav-buttons side="right">
+    <button ng-click="goToSpot();" class="button button-icon icon ion-eye"></button>
+  </ion-nav-buttons>
 </ion-nav-bar>
   <ion-content class="has-header">
     <form class="list">
