added ability to delete spot from spot page

--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -1,5 +1,6 @@
 <ion-view title="Spot Detail">
   <ion-nav-buttons side="right">
+    <button ng-click="deleteSpot();" class="button button-icon icon ion-trash-a"></button>
     <button ng-click="goToSpot();" class="button button-icon icon ion-eye"></button>
   </ion-nav-buttons>
 </ion-nav-bar>
