--- a/www/templates/spots.html
+++ b/www/templates/spots.html
@@ -8,7 +8,7 @@
     <ion-content class="has-header">
       <ion-list>
         <ion-item ng-repeat="spot in spots" href="#/app/spots/{{spot.properties.id}}">
-          {{spot.properties.name}} <small>Id: {{spot.properties.id}}</small>          
+          {{spot.properties.name}}          
         </ion-item>
       </ion-list>
     </ion-content>
