--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -5,37 +5,52 @@
   </ion-nav-buttons>
   <ion-content class="has-header">
     <form class="list">
-      <label class="item item-input">
-        <span class="input-label"><b>Spot Name</b></span>
-        <input type="text" placeholder="What do you want to call this Spot?" ng-model="spot.properties.name">
-      </label>
-      <label class="item item-input">
-        <span class="input-label"><b>Date</b></span>
-        <input type="date" ng-model="spot.properties.date" value={{spot.properties.date}}>
-      </label>
+      <div class="row responsive-md">
+        <div class="col">
+          <label class="item item-input">
+            <span class="input-label"><b>Spot Name</b></span>
+            <input type="text" placeholder="What do you want to call this Spot?" ng-model="spot.properties.name">
+          </label>
+          <label class="item item-input">
+            <span class="input-label"><b>Date</b></span>
+            <input type="date" ng-model="spot.properties.date" value={{spot.properties.date}}>
+          </label>
+
+      </div>
       
       <!-- Location -->
-      <div class="item item-divider">
-        Location
-        <ion-buttons side="right">
-          <button ng-click="getLocation();" class="button-icon icon ion-pinpoint"></button>
-          <button ng-click="openMap();" class="button-icon icon ion-map"></button>          
-        </ion-buttons>
+      <div class="col">
+        <div class="item item-divider">
+          Location & Geometry
+        </div>
+        Feature Type: {{spot.geometry.type}}    <!--   <label class="item item-input">
+          <input type="string" ng-model="friendlyGeom" value={{friendlyGeom}} ng-disabled="true">
+        </label>    -->    
+        <label class="item item-input" ng-show="showLatLng">
+          <span class="input-label">Latitude</span>
+          <input type="number" ng-model="point.latitude" value={{point.latitude}}>
+        </label>
+        <label class="item item-input" ng-show="showLatLng">
+          <span class="input-label">Longitude</span>
+          <input type="number" ng-model="point.longitude" value={{point.longitude}}>
+        </label>
+        <div>
+        Update Location From
+        <div>
+          <ion-buttons>
+            <button ng-click="getLocation();" class="button icon-left ion-pinpoint">My Location</button>
+          </ion-buttons>
+
+          <ion-buttons>
+            <button ng-click="openMap();" class="button icon-left icon ion-map">Map</button>          
+          </ion-buttons>
+        </div>
+        </div>
       </div>
-      <label class="item item-input">
-        <input type="string" ng-model="friendlyGeom" value={{friendlyGeom}} ng-disabled="true">
-      </label>        
-      <label class="item item-input" ng-show="showLatLng">
-        <span class="input-label">Latitude</span>
-        <input type="number" ng-model="point.latitude" value={{point.latitude}}>
-      </label>
-      <label class="item item-input" ng-show="showLatLng">
-        <span class="input-label">Longitude</span>
-        <input type="number" ng-model="point.longitude" value={{point.longitude}}>
-      </label>
-      
+    </div>  
+    
       <!-- Spot Type -->
-       <div class="item item-divider">
+      <div class="item item-divider">
         Attitude Type
       </div>
       <ion-radio ng-repeat="item in attitude_type"
@@ -45,59 +60,66 @@
         {{ item.text }}
       </ion-radio>
       
+      <!-- More Detail -->
       <div class="item item-divider">
-        Spot Detail
+        More Detail
       </div>
       
-      <label class="item item-input item-select">
-        <div class="input-label" >
-          Plane Type
-         </div>
-        {{spot.properties.plane_type}}
-        <select ng-model="spot.properties.plane_type"">
-          <option ng-repeat="item in plane_type" ng-value="item.value">
-            {{item.text}}
-          </option>
-        </select>
-      </label>
-      <label class="item item-input">
-        <span class="input-label">Strike</span>
-        <input type="text" placeholder="What is the strike?" ng-model="spot.properties.strike">
-      </label>
-      <label class="item item-input">
-        <span class="input-label">Dip</span>
-        <input type="text" placeholder="What is the dip?" ng-model="spot.properties.dip">
-      </label>
+      <div class="row responsive-md">
+        <div class="col">
+          <label class="item item-input item-select">
+            <div class="input-label" >
+              Plane Type
+             </div>
+            {{spot.properties.plane_type}}
+            <select ng-model="spot.properties.plane_type"">
+              <option ng-repeat="item in plane_type" ng-value="item.value">
+                {{item.text}}
+              </option>
+            </select>
+          </label>
+          <label class="item item-input">
+            <span class="input-label">Strike</span>
+            <input type="number" placeholder="What is the strike?" ng-model="spot.properties.strike">
+          </label>
+          <label class="item item-input">
+            <span class="input-label">Dip</span>
+            <input type="number" placeholder="What is the dip?" ng-model="spot.properties.dip">
+          </label>
+          </div>
+          <div class="col">
             <label class="item item-input item-select">
-        <div class="input-label" >
-          Plane Quality
-         </div>
-        {{spot.properties.plane_quality}}
-        <select ng-model="spot.properties.plane_quality" ng-change="typeSelected()">
-          <option ng-repeat="item in plane_quality" ng-value="item.value">
-            {{item.text}}
-          </option>
-        </select>
-      </label>
-      <label class="item item-input item-select">
-        <div class="input-label" >
-          Plane Facing
-         </div>
-        {{spot.properties.plane_facing}}
-        <select ng-model="spot.properties.plane_facing" ng-change="typeSelected()">
-          <option ng-repeat="item in plane_facing" ng-value="item.value">
-            {{item.text}}
-          </option>
-        </select>
-      </label>
-      <label class="item item-input">
-        <span class="input-label">Unit Name</span>
-        <input type="text" placeholder="What is the unit name?" ng-model="spot.properties.unit_name">
-      </label>
-      <label class="item item-input">
-        <span class="input-label">Unit Label</span>
-        <input type="text" placeholder="What is the unit label?" ng-model="spot.properties.unit_label">
-      </label>
+            <div class="input-label" >
+              Plane Quality
+             </div>
+            {{spot.properties.plane_quality}}
+            <select ng-model="spot.properties.plane_quality" ng-change="typeSelected()">
+              <option ng-repeat="item in plane_quality" ng-value="item.value">
+                {{item.text}}
+              </option>
+            </select>
+          </label>
+          <label class="item item-input item-select">
+            <div class="input-label" >
+              Plane Facing
+             </div>
+            {{spot.properties.plane_facing}}
+            <select ng-model="spot.properties.plane_facing" ng-change="typeSelected()">
+              <option ng-repeat="item in plane_facing" ng-value="item.value">
+                {{item.text}}
+              </option>
+            </select>
+          </label>
+          <label class="item item-input">
+            <span class="input-label">Unit Name</span>
+            <input type="text" placeholder="What is the unit name?" ng-model="spot.properties.unit_name">
+          </label>
+          <label class="item item-input">
+            <span class="input-label">Unit Label</span>
+            <input type="text" placeholder="What is the unit label?" ng-model="spot.properties.unit_label">
+          </label>
+        </div>
+      </div>
       
       <div class="item item-divider">
         Notes
