--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -71,7 +71,7 @@
             <div class="input-label">
               Plane Type
             </div>
-            <select ng-model="spot.properties.plane_type" ng-options="item.value as item.text for item in plane_type"></select>
+            <select ng-model="spot.properties.plane_type" ng-options="item.value as item.text for item in plane_type | orderBy:'text'"></select>
           </label>
           <label class="item item-input">
             <span class="input-label">Strike</span>
@@ -87,13 +87,13 @@
             <div class="input-label">
               Plane Quality
             </div>
-            <select ng-model="spot.properties.plane_quality" ng-options="item.value as item.text for item in plane_quality" ng-change="typeSelected()"></select>
+            <select ng-model="spot.properties.plane_quality" ng-options="item.value as item.text for item in plane_quality | orderBy:'text'" ng-change="typeSelected()"></select>
           </label>
           <label class="item item-input item-select">
             <div class="input-label">
               Plane Facing
             </div>
-            <select ng-model="spot.properties.plane_facing" ng-options="item.value as item.text for item in plane_facing" ng-change="typeSelected()"></select>
+            <select ng-model="spot.properties.plane_facing" ng-options="item.value as item.text for item in plane_facing | orderBy:'text'" ng-change="typeSelected()"></select>
           </label>
           <label class="item item-input">
             <span class="input-label">Unit Name</span>
