--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,3 +1,9 @@
+<style type="text/css">
+    .popover{
+        max-width:150px;
+        max-height:100px;
+    }
+</style>
 <ion-view title="Strabo Mobile">
     <ion-nav-buttons side="left">
       <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
@@ -12,5 +18,6 @@
     </ion-nav-buttons>
     <ion-content data-tap-disabled="true">
       <div id="mapdiv" style="height:100%"></div>
+      <div id="popup"></div>
     </ion-content>
 </ion-view>
