changed color of side menu header bar

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -8,7 +8,7 @@
   </ion-pane>
 
   <ion-side-menu side="left">
-    <header class="bar bar-header bar-stable">
+    <header class="bar bar-header bar-calm">
       <h1 class="title">Strabo Mobile</h1>
     </header>
     <ion-content class="has-header">
