--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,43 +1,44 @@
-/* Empty. Add your own CSS if you like */
-
-.map { height: 100%; }
-
+.map { 
+  height: 100%; 
+}
+.bar.bar-calm {
+  background-color: #C6E4FE;
+}
 .glyph-active {
 	border:1 solid #000;
 }
-
 .draw-controls {
-    position: absolute;
-    margin-top: 4em;
-    top: 6em;
-    left: .5em;
-    background: rgba(255, 255, 255, 0.4);
-    border-radius: 4px;
-    padding: 2px;
+  position: absolute;
+  margin-top: 4em;
+  top: 6em;
+  left: .5em;
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 4px;
+  padding: 2px;
 }
 .ol-touch .draw-controls {
-    top: 80px;
+  top: 80px;
 }
 .draw-controls a {
-    display: block;
-    color: white;
-    font-size: 16px;
-    font-family: 'Lucida Grande', Verdana, Geneva, Lucida, Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    margin: 1px;
-    text-decoration: none;
-    text-align: center;
-    border-radius: 2px;
-    height: 22px;
-    width: 22px;
-    background: #5c914f;
+  display: block;
+  color: white;
+  font-size: 16px;
+  font-family: 'Lucida Grande', Verdana, Geneva, Lucida, Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  margin: 1px;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 2px;
+  height: 22px;
+  width: 22px;
+  background: #5c914f;
 }
 .ol-touch .draw-controls a {
-    font-size: 20px;
-    height: 30px;
-    width: 30px;
-    line-height: 26px;
+  font-size: 20px;
+  height: 30px;
+  width: 30px;
+  line-height: 26px;
 }
 .draw-controls a:hover {
-    background: rgba(0, 60, 136, 0.7);
+  background: rgba(0, 60, 136, 0.7);
 }
