renamed activity to archiveTiles

--- a/www/templates/archiveTiles.html
+++ b/www/templates/archiveTiles.html
@@ -1,4 +1,4 @@
-<ion-view title="Map Name">
+<ion-view title="Archive Tiles">
   <ion-content class="has-header">
     <form class="list">
       <div class="row responsive-md">
