added offline tiles management menu

--- a/www/templates/archiveTiles.html
+++ b/www/templates/archiveTiles.html
@@ -5,7 +5,7 @@
         <div class="col">
           <label class="item item-input">
             <span class="input-label"><b>Offline Map Name</b></span>
-            <input type="text" placeholder="map name" ng-model="map.name">
+            <input type="text" placeholder="map name" ng-model="map.name" autofocus>
           </label>          
       </div>
       
