--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -9,7 +9,7 @@
         <div class="col">
           <label class="item item-input">
             <span class="input-label"><b>Spot Name</b></span>
-            <input type="text" placeholder="Name this Spot" ng-model="spot.properties.name">
+            <input type="text" placeholder="Name this Spot" ng-model="spot.properties.name" autofocus>
           </label>
           <label class="item item-input">
             <span class="input-label"><b>Date</b></span>
