--- a/www/templates/archiveTiles.html
+++ b/www/templates/archiveTiles.html
@@ -19,7 +19,7 @@
       <p>Current number of offline tiles: {{numOfflineTiles}}</p>
       <p></p>
       <p>Estimated number of tiles to download: {{map.tiles.length}}</p>
-      <p>Estimated total download size: {{(map.tiles.length * avgTileBytes) / 1024 / 1024 | number:0}} MB</p>
+      <p>Estimated total download size: {{map.tilesSizeString}}</p>
     </div>
 
     <div class="padding">
