removed unneeded css classes

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,7 +1,7 @@
 <ion-side-menus>
 
   <ion-pane ion-side-menu-content>
-    <ion-nav-bar class="bar-bar-light transparent-nav nav-title-slide-ios7" style="background: none; border-bottom: none">
+    <ion-nav-bar class="nav-title-slide-ios7" style="background: none; border-bottom: none">
       <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i> Back</ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
