--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,17 +1,17 @@
 <ion-side-menus>
 
   <ion-pane ion-side-menu-content>
-    <ion-nav-bar class="nav-title-slide-ios7" style="background: none; border-bottom: none">
+    <ion-nav-bar class="bar-dark nav-title-slide-ios7">
       <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i> Back</ion-nav-back-button>
     </ion-nav-bar>
     <ion-nav-view name="menuContent" animation="slide-left-right"></ion-nav-view>
   </ion-pane>
 
   <ion-side-menu side="left">
-    <header class="bar bar-header bar-calm">
+    <header class="bar bar-header bar-dark">
       <h1 class="title">Strabo Mobile</h1>
     </header>
-    <ion-content class="has-header">
+    <ion-content class="has-header bar-dark">
       <ion-list>
         <ion-item nav-clear menu-close ng-click="login()">
           Login
