added basic databse connectivity

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -28,6 +28,9 @@
 				<ion-item nav-clear menu-close href="#/app/search">
           Search
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/sync">
+          Sync
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/about">
           About
         </ion-item>
