images can be seen in spot view

--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -25,7 +25,7 @@
       <!-- Images -->
       <div class="row responsive-md">
         <ul>
-          <li ng-repeat="image in cameraImages" style="display: inline;">
+          <li ng-repeat="image in spot.images" style="display: inline;">
             <img ng-src="{{image.src}}" width="100" height="100"/>
           </li>
         </ul>
