--- a/www/templates/spot.html
+++ b/www/templates/spot.html
@@ -1,7 +1,7 @@
 <ion-view title="Spot Detail">
   <ion-nav-buttons side="right">
     <button ng-click="deleteSpot();" class="button button-icon icon ion-trash-a"></button>
-    <button ng-click="camera()" class="button button-icon icon ion-camera"></button>
+    <button ng-click="cameraModal()" class="button button-icon icon ion-camera"></button>
     <button ng-click="goToSpot();" class="button button-icon icon ion-eye"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
@@ -114,7 +114,7 @@
           </label>
         </div>
       </div>
-      
+
       <!-- Images -->
       <div class="row responsive-md">
         <ul>
@@ -123,7 +123,7 @@
           </li>
         </ul>
       </div>
-      
+
       <div class="item item-divider">
         Notes
       </div>
