added map provider information to offline tiles menu

--- a/www/templates/offlinemap.html
+++ b/www/templates/offlinemap.html
@@ -13,7 +13,7 @@
         <span>
           <button class="button button-small button-calm" ng-click="edit(map)">edit</button>
           <button class="button button-small button-assertive" ng-click="delete(map)">delete</button>
-        </span> {{map.name}} (tile count: {{map.tileIds.length}}, size: {{map.size}})
+        </span> {{map.name}} (tile count: {{map.tileIds.length}}, size: {{map.size}}), provider: {{map.mapProvider}})
       </ion-item>
     </ion-list>
 
